# OpenDraw

./: .env.development  .env.production  .gitattributes  .gitignore  BUILD_NOTES.md  CONTRIBUTING.md  LICENSE  README.md  THEME_FLASH_ISSUE.md  create-icon-simple.ps1  create-icon.ps1  global.d.ts  index.html  index.tsx  package.json  tsconfig.json  vite-plugin-exclude-unused.ts  vite.config.mts
.github/workflows/: build.yml
src/: App.tsx  App.tsx.backup  app_constants.ts  index.html  index.scss  package.json  vite.config.mts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: canvas.rs  collision.rs  file_ops.rs  image_export.rs  lib.rs  main.rs
src/collab/: Collab.tsx
src/components/: AppFooter.tsx  AppMainMenu.tsx  AppWelcomeScreen.tsx  Calculator.scss  Calculator.tsx  CalculatorButton.scss  CalculatorButton.tsx  EncryptedIcon.tsx  RustExportDialog.tsx  TabBar.scss  TabBar.tsx  TabbedApp.tsx
src/data/: firebase.ts
src/utils/: rustBackend.ts
